# ThreatPlaybook

./: .gitignore  .travis.yml  MANIFEST.in  Pipfile  README.md  docker-compose-old.yml  docker-compose.yaml  docker-compose.yml  index.html  nginx.Dockerfile  nginx.conf  setup.py
api/: Dockerfile  Makefile  Pipfile  api_cli.py  app.py  gql.py  main.py  models.py  orchy_gql.py  orchy_model.py  pyproject.toml  queries.py  requirements.txt  test_api.py  utils.py  wait-for
api/asvs/: asvs.csv
api/repo/: password-bruteforce.yaml  plaintext-transmission.yaml  ssrf.yaml  weak-default-password.yaml
api/test/: test_playbook.py
api/tp_api/: app.py  utils.py
api/tp_api/repo/: cert_validation.yaml  code_injection.yaml  sql_injection.yaml
api/tp_api/swagger/: abuse-create.yml  feature-create.yml  get-abuse.yml  get-feature.yml  get-scenario.yml  scenario-inline.yml  scenario-repo.yml  target-create-update.yml  test-case-create.yml  vulnerability-create.yml
apiv2/: Dockerfile  requirements.txt
cli/: .cred  Pipfile  playbook.py  repo_gql.json  setup.py
docs/: CNAME  Getting-Started.md  README.md  _navbar.md  _sidebar.md  doc1.md  doc2.md  doc3.md  doc4.md  index.html  keywords.html
docs_v1/: README.md
documentation/: docusaurus.config.js  package.json  sidebars.js
example/: TestRobot.robot
frontend/: Dockerfile  docker-entrypoint.sh
ideas/: Models.md  README.md
nginx/: Dockerfile  alpine.df
robot/: Pipfile  README.md  setup.py
threat_playbook/: ThreatPlaybook.py  __init__.py  burp_db.json  cli.py  models.py  repo.json  requirements.txt  utils.py  (+1 more)
(+288 files in other folders)
