[tool.poetry]
name = "threatplaybook-api"
version = "4.0.0"
description = ""
authors = ["Abhay Bhargav <abhay@we45.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.0"
bcrypt = "^3.2.0"
email-validator = "^1.1.3"
loguru = "^0.5.3"
pyArango = "^1.3.5"
pydantic = "^1.8.2"
uvicorn = "^0.15.0"
PyJWT = "^2.3.0"
jmespath = "^0.10.0"
python-dotenv = "0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
